# a3-motion-ui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.reuse/: dep5
config/: config.json
src/: A3MotionAudioProcessor.cc  A3MotionAudioProcessor.hh  A3MotionEditor.cc  A3MotionEditor.hh  A3MotionMainUIComponent.cc  A3MotionMainUIComponent.hh  A3MotionMainWindow.cc  A3MotionMainWindow.hh  A3MotionStandaloneApp.cc  A3MotionStandaloneApp.hh  Config.hh  MainComponent.cc  MainComponent.hh  MainWindow.cc  MainWindow.hh  StandaloneApp.cc  StandaloneApp.hh
src/a3-motion-engine/: AsyncCommandQueue.cc  AsyncCommandQueue.hh  CMakeLists.txt  Channel.cc  Channel.hh  Config.hh.in  Master.cc  Master.hh  Measure.cc  Measure.hh  MotionEngine.cc  MotionEngine.hh  Pattern.cc  Pattern.hh  PatternGenerator.cc  PatternGenerator.hh  TempoClock.cc  TempoClock.hh  UserConfig.cc  UserConfig.hh
src/a3-motion-engine/backends/: SpatBackend.hh  SpatBackendA3.cc  SpatBackendA3.hh  SpatBackendIEM.cc  SpatBackendIEM.hh
src/a3-motion-engine/elevation/: HeightMap.hh  HeightMapFlat.cc  HeightMapFlat.hh  HeightMapSphere.cc  HeightMapSphere.hh
src/a3-motion-engine/tempo/: Measure.cc  Measure.hh  TempoClock.cc  TempoClock.hh  TempoEstimator.cc  TempoEstimator.hh  TempoEstimatorIRLS.cc  TempoEstimatorIRLS.hh  TempoEstimatorLast.cc  TempoEstimatorLast.hh  TempoEstimatorMean.cc  TempoEstimatorMean.hh  TempoEstimatorMeanSelective.cc  TempoEstimatorMeanSelective.hh
src/a3-motion-engine/util/: Geometry.hh  Helpers.cc  Helpers.hh  Timing.cc  Timing.hh  Types.hh
src/a3-motion-tests/: CMakeLists.txt  TestRunnerApp.cc
src/a3-motion-tests/unit/: Position.cc  TempoClock.cc
src/a3-motion-ui/: A3MotionAudioProcessor.cc  A3MotionAudioProcessor.hh  A3MotionEditor.cc  A3MotionEditor.hh  CMakeLists.txt  Config.hh.in  Helpers.hh  LayoutHints.cc  LayoutHints.hh  LookAndFeel.cc  LookAndFeel.hh  MainWindow.cc  MainWindow.hh  MotionController.cc  MotionController.hh  StandaloneApp.cc  StandaloneApp.hh
src/a3-motion-ui/components/: A3MotionUIComponent.cc  A3MotionUIComponent.hh  ChannelFooter.cc  ChannelFooter.hh  ChannelHeader.cc  ChannelHeader.hh  ChannelStrip.cc  ChannelStrip.hh  ChannelUIState.hh  ChannelViewState.hh  DirectivityComponent.cc  DirectivityComponent.hh  LayoutHints.cc  LayoutHints.hh  LookAndFeel.cc  LookAndFeel.hh  MainComponent.cc  MainComponent.hh  MotionComponent.cc  MotionComponent.hh  PatternMenu.cc  PatternMenu.hh  PatternUIState.hh  StatusBar.cc  StatusBar.hh  TickIndicator.cc  TickIndicator.hh  Ticks.cc  Ticks.hh
src/a3-motion-ui/io/: InputOutputAdapter.cc  InputOutputAdapter.hh  InputOutputAdapterV2.cc  InputOutputAdapterV2.hh  LEDColours.cc  LEDColours.hh
src/a3-motion-ui/tests/: TempoEstimatorTest.cc  TempoEstimatorTest.hh
src/engine/: Channel.cc  Channel.hh  Master.hh  MotionEngine.cc  MotionEngine.hh  TempoClock.cc  TempoClock.hh
src/ui/: ChannelFooter.cc  ChannelFooter.hh  ChannelHeader.cc  ChannelHeader.hh  Config.hh  LayoutHints.cc  LayoutHints.hh  LookAndFeel.cc  LookAndFeel.hh  MotionComponent.cc  MotionComponent.hh
src/util/: Helpers.hh  Timing.cc
tests/: test_example.cc
tests/unit/: TempoClock.cc
